--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -27,10 +27,7 @@
                 <td>{{ post.createdAt ? post.createdAt|date('d-m-Y H:i:s') : '' }}</td>
                 <td>{{ post.updatedAt ? post.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
                 <td>
-                    <form action="{{ path('app_post_delete', {'id': post.id}) }}" method="post">
-                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.id) }}">
-                        <button type="submit">delete</button>
-                    </form>
+                    {{ include('post/_delete_form.html.twig') }}
                     <a href="{{ path('app_post_show', {'id': post.id}) }}">show</a>
                     <a href="{{ path('app_post_edit', {'id': post.id}) }}">edit</a>
                 </td>
