--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -1,13 +1,18 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_boxed.html.twig' %}
 
 {% block title %}Edit Post{% endblock %}
 
-{% block body %}
-    <h1>Edit Post</h1>
+{% block content %}
+    <div class="card card-body col-lg-8 mr-auto ml-auto">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1>Edit Post</h1>
+            <a href="{{ path('app_post_index') }}" class="btn btn-primary">back to list</a>
+        </div>
+        {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
+        <div class="mt-2">
+            {{ include('post/_delete_form.html.twig') }}
+        </div>
+    </div>
 
-    {{ include('post/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_post_index') }}">back to list</a>
-
-    {{ include('post/_delete_form.html.twig') }}
 {% endblock %}
