--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -1,12 +1,16 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_fluid.html.twig' %}
 
 {% block title %}Post index{% endblock %}
 
-{% block body %}
-    <h1>Post index</h1>
+{% block content %}
+    <div class="container mt-lg-5">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1>Post index</h1>
+            <a href="{{ path('app_post_new') }}" class="btn btn-primary">Create new</a>
+        </div>
 
-    <table class="table">
-        <thead>
+        <table class="table">
+            <thead>
             <tr>
                 <th>Id</th>
                 <th>Title</th>
@@ -16,29 +20,30 @@
                 <th>UpdatedAt</th>
                 <th>actions</th>
             </tr>
-        </thead>
-        <tbody>
-        {% for post in posts %}
-            <tr>
-                <td>{{ post.id }}</td>
-                <td>{{ post.title }}</td>
-                <td>{{ post.body }}</td>
-                <td>{{ post.author }}</td>
-                <td>{{ post.createdAt ? post.createdAt|date('d-m-Y H:i:s') : '' }}</td>
-                <td>{{ post.updatedAt ? post.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
-                <td>
-                    {{ include('post/_delete_form.html.twig') }}
-                    <a href="{{ path('app_post_show', {'id': post.id}) }}">show</a>
-                    <a href="{{ path('app_post_edit', {'id': post.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for post in posts %}
+                <tr>
+                    <td>{{ post.id }}</td>
+                    <td>{{ post.title }}</td>
+                    <td>{{ post.body }}</td>
+                    <td>{{ post.author }}</td>
+                    <td>{{ post.createdAt ? post.createdAt|date('d-m-Y H:i:s') : '' }}</td>
+                    <td>{{ post.updatedAt ? post.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
+                    <td>
+                        {{ include('post/_delete_form.html.twig') }}
+                        <a href="{{ path('app_post_show', {'id': post.id}) }}">show</a>
+                        <a href="{{ path('app_post_edit', {'id': post.id}) }}">edit</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="7">no records found</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
 
-    <a href="{{ path('app_post_new') }}">Create new</a>
+        <a href="{{ path('app_post_new') }}">Create new</a>
+    </div>
 {% endblock %}
