--- a/templates/post/new.html.twig
+++ b/templates/post/new.html.twig
@@ -1,11 +1,14 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_boxed.html.twig' %}
 
 {% block title %}New Post{% endblock %}
 
-{% block body %}
-    <h1>Create new Post</h1>
+{% block content %}
+    <div class="card card-body col-lg-8 mr-auto ml-auto">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1>Create new Post</h1>
+            <a href="{{ path('app_post_index') }}" class="btn btn-primary">back to list</a>
+        </div>
 
-    {{ include('post/_form.html.twig') }}
-
-    <a href="{{ path('app_post_index') }}">back to list</a>
+        {{ include('post/_form.html.twig') }}
+    </div>
 {% endblock %}
