--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -1,12 +1,15 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout_boxed.html.twig' %}
 
 {% block title %}Post{% endblock %}
 
-{% block body %}
-    <h1>Post</h1>
-
-    <table class="table">
-        <tbody>
+{% block content %}
+    <div class="card card-body col-lg-6 mr-auto ml-auto">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1>Post</h1>
+            <a href="{{ path('app_post_index') }}" class="btn btn-primary">back to list</a>
+        </div>
+        <table class="table">
+            <tbody>
             <tr>
                 <th>Id</th>
                 <td>{{ post.id }}</td>
@@ -31,12 +34,11 @@
                 <th>UpdatedAt</th>
                 <td>{{ post.updatedAt ? post.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_post_index') }}">back to list</a>
-
-    <a href="{{ path('app_post_edit', {'id': post.id}) }}">edit</a>
-
-    {{ include('post/_delete_form.html.twig') }}
+            </tbody>
+        </table>
+        <div class="d-flex justify-content-between align-items-center">
+            {{ include('post/_delete_form.html.twig') }}
+            <a href="{{ path('app_post_edit', {'id': post.id}) }}" class="btn btn-primary">Edit</a>
+        </div>
+    </div>
 {% endblock %}
